--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nz-layout class="app-layout">
+<!-- <nz-layout class="app-layout">
   <nz-sider class="menu-sidebar"
             nzCollapsible
             nzWidth="256px"
@@ -31,7 +31,7 @@
             <a routerLink="/acente">Tüm Acenteler</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="/acente-add">Acente Ekle</a>
+            <a routerLink="/acentes-add">Acente Ekle</a>
           </li>
           <li nz-menu-item nzMatchRouter>
             <a>Aktif/Pasif Acenteler</a>
@@ -41,7 +41,7 @@
       <li nz-submenu  nzTitle="Sürücüler" nzIcon="form">
         <ul>
           <li nz-menu-item nzMatchRouter>
-            <a>Tüm Sürücüler</a>
+            <a  routerLink="/surucu">Tüm Sürücüler</a>
           </li>
           <li nz-menu-item nzMatchRouter>
             <a>Sürücü Ekle</a>
@@ -141,3 +141,11 @@
     </nz-content>
   </nz-layout>
 </nz-layout>
+ -->
+ <nz-content>
+  
+    <router-outlet></router-outlet>
+  
+</nz-content>
+
+
