--- a/src/app/acente/acente.component.html
+++ b/src/app/acente/acente.component.html
@@ -11,112 +11,55 @@
         </a>
       </div>
       <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-        <li nz-submenu  nzTitle="Dashboard" nzIcon="dashboard">
+        <li nz-submenu  nzTitle="Rezervasyonlarım" nzIcon="dashboard">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/welcome">Welcome</a>
+              <a routerLink="/welcome">Yeni Rezervasyon</a>
             </li>
             
             <li nz-menu-item nzMatchRouter>
-              <a>Workplace</a>
+              <a>Aktif Rezervasyon</a>
+            </li>
+            <li nz-menu-item nzMatchRouter>
+              <a>Biten Rezervasyon</a>
             </li>
           </ul>
         </li>
       
-        <li nz-submenu  nzTitle="Acenteler" nzIcon="form">
+        <li nz-submenu  nzTitle="Yolcular" nzIcon="form">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="">Tüm Acenteler</a>
+              <a>Yolcu Ekle</a>
             </li>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="">Acente Ekle</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Aktif/Pasif Acenteler</a>
+              <a >Kayıtlı Yolcular</a>
             </li>
           </ul>
         </li>
-        <li nz-submenu  nzTitle="Sürücüler" nzIcon="form">
+        <li nz-submenu  nzTitle="Destek Talebi" nzIcon="form">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a  routerLink="">Tüm Sürücüler</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Sürücü Ekle</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Aktif/Pasif Sürücüler</a>
-            </li>
-          </ul>
-        </li>
-        <li nz-submenu  nzTitle="Üyeler" nzIcon="form">
-          <ul>
-            <li nz-menu-item nzMatchRouter>
-              <a>Tüm Üyeler</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Üye Ekle</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Aktif/Pasif Üyeler</a>
-            </li>
-          </ul>
-        </li>
-        <li nz-submenu nzTitle="Transferler" nzIcon="form">
-          <ul>
-            <li nz-menu-item nzMatchRouter>
-              <a>Tüm Transferler</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Transfer Güncelle</a>
-            </li>
-          </ul>
-        </li>
-        <li nz-submenu  nzTitle="Rezervasyonlar" nzIcon="form">
-          <ul>
-            <li nz-menu-item nzMatchRouter>
-              <a>Tüm Rezervasyonlar</a>
+              <a  >Destek Talebi Oluştur</a>
             </li>
             
           </ul>
         </li>
-        <li nz-submenu  nzTitle="Destek Talepleri" nzIcon="form">
+        <li nz-submenu  nzTitle="Raporlar" nzIcon="form">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a>Üye Talepleri</a>
+              <a>Rapor Listesi</a>
             </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Acente Talepleri</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Sürücü Talepleri</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Tedarikçi Talepleri</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Tüm Talepler</a>
-            </li>
-            
           </ul>
         </li>
-        <li nz-submenu  nzTitle="Tanımlamalar" nzIcon="form">
+        <li nz-submenu nzTitle="Profil Bilgileri" nzIcon="form">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a>Şehirler</a>
+              <a>Profilimi Görüntüle</a>
             </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Rotalar</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Popüler Rotalar</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Araç Tipleri</a>
-            </li>
-            <li nz-menu-item nzMatchRouter>
-              <a>Hizmet Noktaları</a>
-            </li>
+          </ul>
+        </li>
+        <li nz-submenu  nzTitle="Çıkış" nzIcon="form">
+          <ul>
           </ul>
         </li>
       </ul>
