--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,6 @@
+<!-- 
+ng generate module customers --route customers --module app.module -->
+
 <nz-layout class="app-layout">
     <nz-sider class="menu-sidebar"
               nzCollapsible
@@ -28,7 +31,7 @@
         <li nz-submenu  nzTitle="Acenteler" nzIcon="form">
           <ul>
             <li nz-menu-item nzMatchRouter>
-              <a routerLink="/admin/acentes">Tüm Acenteler</a>
+              <a routerLink="/admin/getacentedetails">Tüm Acenteler</a>
             </li>
             <li nz-menu-item nzMatchRouter>
               <a routerLink="/admin/acentes-add">Acente Ekle</a>
